resources/stylesheets/sass/views/_docs.scss
.documentation {
  .docuHeaderHero {
    z-index: 100;
    background-color: $pri_midblue;
    background-size: cover;
    background-position: 50% 50%;
    background-image: url(../images/bg.jpg);
    background-repeat: no-repeat;
    padding-top: 120px;
    padding-bottom: 20px;
    margin-bottom: 60px;
    @include single-column {
      padding-top: 100px;
    }
    h1 {
      color: #fff;
    }
    .headerContainer {
      display: flex;
      flex-direction: row;
      flex-wrap: nowrap;
      justify-content: space-between;
      align-items: center;
      @include single-column {
        flex-direction: column;
        justify-content: flex-start;
      }
      .headerSearch {
        @include single-column {
          width: 100%;
        }
        #search-ref-docs {
          display: flex;
          flex-direction: row;
          flex-wrap: nowrap;
          justify-content: space-between;
          align-items: center;
          @include single-column {
            justify-content: flex-start;
          }
          li {
            p {
              color: #fff;
              margin: 0 15px;
            }
            input {
              -webkit-appearance: none;
              -moz-appearance: none;
              min-width: 250px;
              @include single-column {
                min-width: auto;
              }
            }
            select {
              border: none;
              border-radius: 0;
              display: inline-block;
              font: inherit;
              line-height: 1.5em;
              padding: 0.4em 3.5em 0.4em 1em;
              margin: 0;
              -webkit-box-sizing: border-box;
              -moz-box-sizing: border-box;
              box-sizing: border-box;
              -webkit-appearance: none;
              -moz-appearance: none;
              background-image: url("../images/arrowdown.svg");
              background-position: calc(100% - 20px) calc(0em + 15px),
              calc(100% - 15px) calc(1em + 2px),
              100% 0;
              background-size: 10px 10px,
              10px 10px,
              2.5em 2.5em;
              background-repeat: no-repeat;
              &:focus {
                outline: none;
              }
              option {

              }
            }
          }
        }
        .searchVersion {
          color: #fff;
          @include x-rem(font-size, 1.6);
          @include single-column {
            display: block;
            margin-left: 0;
          }
        }
      }
      .headerButtons {
        @include single-column {
          width: 100%;
        }
        a {
          box-sizing: border-box;
          margin: 0 15px 0 0;
          @include x-rem(font-size, 1.4);
        }
      }
    }
  }
  .getStarted {
    margin-bottom: 40px;
  }
  .getStartedBtn {
    margin-left: 40%;
    margin-top: 10%;
    @include single-column {
      margin: 0 0 30px 0;
    }
  }
  .docModuleGrid {
    display: flex;
    justify-content: space-between;
    margin-bottom: 30px;
    @include single-column {
      display: block;
      margin-bottom: 0;
    }
    .box {
      @include box-shadow;
      width: 32%;
      text-align: left;
      position: relative;
      .mayChangeStamp {
        position: absolute;
        top: 5px;
        right: 5px;
        width: 90px;
        height: auto;
      }
      @include single-column {
        width: 100%;
        margin-bottom: 30px;
      }
      img {
        height: 100px;
      }
      h1 {
        text-align: center;
        color: $pri_lightblue;
        @include x-rem(font-size, 2.6);
        margin: 30px auto 0 auto;
        padding: 0 0 15px 0;
      }
      p {
        @include single-column {
          text-align: center;
        }
      }
      a {
        display: inline-block;
      }
      .underLine {
        width: 60%;
        border-bottom: 1px solid rgba(0, 0, 0, 0.2);
        margin: 0 auto 30px auto;
        display: block;
      }
      .docMeta {
        margin-top: 30px;
        text-align: center;
        display: flex;
        flex-flow: row wrap;
        justify-content: space-around;
        .docMetaContent {
          max-width: 30%;
          a {
            color: $pri_orange;
            border-bottom: 1px solid $pri_orange;
            &:hover {
              color: $pri_blue;
              border-bottom: 1px solid $pri_blue;
            }
          }
        }
      }
      .docTabPanel {
        margin: 40px 0 20px 0;
        .tabPanelList {
          margin: 0;
          padding: 0;
          li {
            list-style-type: none;
            display: inline-block;
            background: #fff;
            margin: 0;
            padding: 5px 15px;
            color: #000;
            cursor: pointer;
            @include x-rem(font-size, 1.4);
            &:hover {
              color: #000;
              background: #ededed;
            }
          }
          li.active {
            color: #000;
            background: #ededed;
          }
        }
        .tabPanel {
          display: none;
          background: #ededed;
          padding: 15px;
          p {
            background-color: rgba(255, 255, 255, 0.5);
            margin: 0;
            padding: 4px;
            font-family: "Source";
            text-align: left;
            @include x-rem(font-size, 1.4);
            overflow: auto;
          }
        }
        .tabPanel.active {
          display: block;
        }
      }
    }
  }
}

